@@ -4,22 +4,21 @@ manual-changelog: changelog.txt
 
 externals:
 	Libs/LibStub: svn://svn.wowace.com/wow/libstub/mainline/tags/1.0
-	Libs/CallbackHandler-1.0: svn://svn.wowace.com/wow/callbackhandler/mainline/tags/1.0.5/CallbackHandler-1.0
-	Libs/AceAddon-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r907/AceAddon-3.0
-	Libs/AceHook-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r907/AceHook-3.0
-	Libs/AceComm-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r907/AceComm-3.0
-	Libs/AceDB-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r907/AceDB-3.0
-	Libs/AceDBOptions-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r907/AceDBOptions-3.0
-	Libs/AceLocale-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r907/AceLocale-3.0
-	Libs/AceEvent-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r907/AceEvent-3.0
-	Libs/AceSerializer-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r907/AceSerializer-3.0
-	Libs/AceTimer-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r907/AceTimer-3.0
-	Libs/AceGUI-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r907/AceGUI-3.0
-	Libs/AceConsole-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r907/AceConsole-3.0
-	Libs/AceConfig-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r907/AceConfig-3.0
-	Libs/LibSharedMedia-3.0: svn://svn.wowace.com/wow/libsharedmedia-3-0/mainline/tags/2/LibSharedMedia-3.0
-	Libs/LibBabble-Race-3.0: svn://svn.wowace.com/wow/libbabble-race-3-0/mainline/tags/3.3-release1
-	Libs/LibBabble-Zone-3.0: svn://svn.wowace.com/wow/libbabble-zone-3-0/mainline/tags/3.3-release20
-	Libs/LibGraph-2.0: svn://svn.wowace.com/wow/libgraph-2-0/mainline/tags/v2.0.1/LibGraph-2.0
+	Libs/CallbackHandler-1.0: svn://svn.wowace.com/wow/callbackhandler/mainline/tags/1.0.6/CallbackHandler-1.0
+	Libs/AceAddon-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r971/AceAddon-3.0
+	Libs/AceHook-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r971/AceHook-3.0
+	Libs/AceComm-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r971/AceComm-3.0
+	Libs/AceDB-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r971/AceDB-3.0
+	Libs/AceDBOptions-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r971/AceDBOptions-3.0
+	Libs/AceLocale-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r971/AceLocale-3.0
+	Libs/AceEvent-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r971/AceEvent-3.0
+	Libs/AceSerializer-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r971/AceSerializer-3.0
+	Libs/AceTimer-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r971/AceTimer-3.0
+	Libs/AceGUI-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r971/AceGUI-3.0
+	Libs/AceConsole-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r971/AceConsole-3.0
+	Libs/AceConfig-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r971/AceConfig-3.0
+	Libs/LibSharedMedia-3.0: svn://svn.wowace.com/wow/libsharedmedia-3-0/mainline/tags/3/LibSharedMedia-3.0
+	Libs/LibBabble-Race-3.0: svn://svn.wowace.com/wow/libbabble-race-3-0/mainline/tags/4.0-release1
+	Libs/LibBabble-Zone-3.0: svn://svn.wowace.com/wow/libbabble-zone-3-0/mainline/tags/4.0-release1
 	Libs/LibDBIcon-1.0: svn://svn.wowace.com/wow/libdbicon-1-0/mainline/trunk/LibDBIcon-1.0
 	Libs/LibLevelGuess-1.0: svn://svn.wowace.com/wow/liblevelguess-1-0/mainline/tags/v1.0.1/LibLevelGuess-1.0
